31: Updated man page

--- a/source/man/ddt.1
+++ b/source/man/ddt.1
@@ -49,6 +49,9 @@ Specifies when output should be colourised\. \fIwhen\fR may be \'auto\', \'alway
 Sets the DDT_PREFIX environmental variable and passes it to all test plans\. This variable is meant to support comparative testing amongst versions of a test target located under different paths\. However, the test plan must be explicitly designed to support this behaviour; if it isn\'t, this option will have no special effect\.
 .
 .P
+\fB\-W\fR, \fB\-\-paths\fR Prints the absolute paths of the test plan(s) that would be executed, but doesn\'t actually execute them\.
+.
+.P
 \fIplan\fR \.\.\.
 .
 .br
