33: Added -s (--summarise) option

--- a/source/man/ddt.1
+++ b/source/man/ddt.1
@@ -39,6 +39,10 @@ Specifies when output should be colourised\. \fIwhen\fR may be \'auto\', \'alway
 Sets the DDT_PREFIX environmental variable and passes it to all test plans\. This variable is meant to support comparative testing amongst versions of a test target located under different paths\. However, the test plan must be explicitly designed to support this behaviour; if it isn\'t, this option will have no special effect\.
 .
 .TP
+\fB\-s\fR, \fB\-\-summarise\fR, \fB\-\-summarize\fR
+Outputs only the plan names and a final summary of the test results\.
+.
+.TP
 \fB\-W\fR, \fB\-\-paths\fR
 Prints the absolute paths of the test plan(s) that would be executed, but doesn\'t actually execute them\.
 .
