--- a/documentation/CHANGES
+++ b/documentation/CHANGES
@@ -1,5 +1,8 @@
 CHANGES: ddt
 
+38 (2014/02/27):
+	- Changes to build system.
+
 37 (2014/02/27):
 	- Improved output of --summarise option.
 	- Added constants from sysexits(3) (can be used in test plans).
